Fix ContextMenu behind Queue

--- a/src/ui/components/ContextMenu/ContextMenu.scss
+++ b/src/ui/components/ContextMenu/ContextMenu.scss
@@ -11,4 +11,5 @@
 
 	/* Misc */
 	border-radius: 16px;
+	z-index: 2;
 }
